--- a/source/index.html
+++ b/source/index.html
@@ -150,15 +150,32 @@
                 </tr>
               </tbody>
             </table>
+          </div>
             <div class="story__slider  slider">
-              <ul class="slider__list">
-                <li class="slider__item  slider__item--before">
-                  <img class="slider__picture" src="img/before-mobile@1x.png" alt="before">
-                </li>
-                <li class="slider__item  slider__item--after">
-                  <img class="slider__picture" src="img/after-mobile@1x.png" alt="after">
-                </li>
-              </ul>
+              <div class="slider__list">
+                <div class="slider__item  slider__item--before">
+                  <!-- <img class="slider__picture" src="img/before-mobile@1x.png" alt="before"> -->
+                  <picture>
+                      <!-- <source type="image/webp" media="(min-width: 1300px)" srcset="img/before-desktop@1x.webp, before-desktop@2x.webp 2x">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/before-tablet@1x.webp, before-tablet@2x.webp 2x">
+                      <source type="image/webp" srcset="img/before-mobile@1x.webp, img/before-mobile@2x.webp 2x"> -->
+                      <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
+                      <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
+                      <img class="slider__picture" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Фото кота до замены корма">
+                    </picture>
+                </div>
+                <div class="slider__item  slider__item--after">
+                  <!-- <img class="slider__picture" src="img/after-mobile@1x.png" alt="after"> -->
+                  <picture>
+                      <!-- <source type="image/webp" media="(min-width: 1300px)" srcset="img/after-desktop@1x.webp, after-desktop@2x.webp 2x">
+                      <source type="image/webp" media="(min-width: 768px)" srcset="img/after-tablet@1x.webp, after-tablet@2x.webp 2x">
+                      <source type="image/webp" srcset="img/after-mobile@1x.webp, img/after-mobile@2x.webp 2x"> -->
+                      <source media="(min-width: 1300px)" srcset="img/after-desktop@1x.png, img/after-desktop@2x.png 2x">
+                      <source media="(min-width: 768px)" srcset="img/after-tablet@1x.png, img/after-tablet@2x.png 2x">
+                      <img class="slider__picture" src="img/after-mobile@1x.png" srcset="img/after-mobile@2x.png 2x" alt="Фото кота после замены корма">
+                    </picture>
+                </div>
+              </div>
               <div class="slider__controls">
                 <button class="slider__control  slider__control--before" type="button">Было</button>
                 <div class="slider__controls-bar">
@@ -168,7 +185,7 @@
               </div>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       </section>
       <section class="contacts  contacts--main-page">
         <div class="contacts__wrapper">
@@ -214,6 +231,7 @@
   <script src="js/menu.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
   <script src="js/map.js"></script>
+  <script src="js/slider.js"></script>
 </body>
 
 </html>
